small design changes, fixed input issue

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
         <!-------------------------------------------------------------------------- Stencils ----------------------------------------------------------------------->
 
-        <div id="stencilContainer-a" class="stencil hidden">
+        <div id="stencilContainer-a" class="stencil">
             <div class="input-section">
                 <span class="label">stencil point a</span>
             </div>
@@ -213,7 +213,7 @@
             </div>
         </div>
 
-        <div id="stencilContainer-b" class="stencil hidden">
+        <div id="stencilContainer-b" class="stencil">
             <div class="input-section">
                 <span class="label">stencil point b</span>
             </div>
